# quadro-csi

./: .env.example  .gitignore  AGENTS.md  LICENSE  Launch Quadro.command  README.md  RUN_DEMO.md  agent_config.example.yaml  index.html  pyproject.toml  render.yaml  requirements-live.txt  run_quadro_demo.py
app/static/: app.js  index.html  styles.css
data/real_cases/: quadro_product_review_case.json
docs/gitlab_transcend/: DEVPOST_COPY.md  SHOWCASE_SUBMISSION.md
docs/public/: AI_ML_API_LANE.md  DATASET_ACCEPTANCE.md  FEATHERLESS_AI_LANE.md  INPUT_COHESION_COMPARISON.md  JUDGES_OVERVIEW.html  JUDGES_OVERVIEW.md  QUADRO_RENDER_PRIVATE_DEMO_RUNBOOK_2026-07-15.md  SLIDE_DECK_OUTLINE.md  STATE_PATH_STABILIZATION.md  SUBMISSION_ASSETS.md  SUBMISSION_DEMO_PROOF.html  (+6 more)
quadro/: __init__.py  agents.py  aimlapi_client.py  band_adapter.py  band_config.py  band_publish.py  demo.py  document_sets.py  env.py  featherless_client.py  hermes_client.py  input_cohesion.py  local_band.py  persistent_memory.py  schemas.py  server.py  stable_state.py  tool_stack.py
scripts/: check_public_boundary.py  compare_input_cohesion.py  render_combined_proof_video.py  render_condition_clips.py  run_band_agents.py  run_document_sets.py  run_partner_capture.py  run_quadro_workflow.py  run_submission_demo_capture.py  smoke_test_quadro.py  verify_aimlapi_setup.py  verify_band_live.py  verify_band_setup.py  verify_featherless_setup.py
tests/: test_band_config.py  test_demo_flow.py  test_document_sets.py  test_featherless_client.py  test_hermes_client.py  test_input_cohesion_comparison.py
(+42 files in other folders)
